@@ -1,3 +1,7 @@
+2008-11-27  Stéphane Raimbault  <stephane.raimbault@gmail.com>
+
+	* people/urls.py: Fixed people list.
+
 2008-11-27  Claude Paroz  <claude@2xlibre.net>
 
 	* media/img/edit.png: Icon for editing.
